WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160749
Baseline GetByVal and PutByVal for cache ID stubs need to handle exceptions
https://bugs.webkit.org/show_bug.cgi?id=160749
Summary
Baseline GetByVal and PutByVal for cache ID stubs need to handle exceptions
Michael Saboff
Reported
2016-08-10 14:31:56 PDT
Both emitGetByValWithCachedId() and emitPutByValWithCachedId() make slow path calls via callOperation(). There are exception checks after the calls in callOperation() and those exception checks need to be linked to the exception handler code for the function that emits the stubs.
Attachments
Patch
(13.13 KB, patch)
2016-08-10 15:40 PDT
,
Michael Saboff
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2016-08-10 14:32:35 PDT
<
rdar://problem/27598428
>
Michael Saboff
Comment 2
2016-08-10 15:40:34 PDT
Created
attachment 285775
[details]
Patch I tested this patch on Mac X86-64, Mac X86, iOS ARM and ARM64 using the added test.
Michael Saboff
Comment 3
2016-08-10 16:46:33 PDT
Committed
r204362
: <
http://trac.webkit.org/changeset/204362
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug